<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item android:id="@+id/action_share"
          android:title="@string/gallery_activity_action_share"
          android:icon="@drawable/ic_share_white_48dp"
          android:orderInCategory="90"
          app:showAsAction="always"
          tools:ignore="AlwaysShowAction"/>
    <item android:id="@+id/action_edit"
          android:title="@string/gallery_activity_action_edit"
          android:icon="@drawable/ic_mode_edit_white_48dp"
          android:orderInCategory="100"
          app:showAsAction="always"
          tools:ignore="AlwaysShowAction"/>
    <item android:id="@+id/action_delete"
          android:title="@string/gallery_activity_action_delete"
          android:icon="@drawable/ic_delete_white_48dp"
          android:orderInCategory="110"
          app:showAsAction="always"
          tools:ignore="AlwaysShowAction"/>
</menu>